--- a/package.json
+++ b/package.json
@@ -96,7 +96,7 @@
     "nopt": "^7.2.1",
     "normalize-package-data": "^6.0.2",
     "npm-audit-report": "^5.0.0",
-    "npm-install-checks": "github:npm/npm-install-checks#reggi/dev-engines",
+    "npm-install-checks": "^7.1.0",
     "npm-package-arg": "^11.0.3",
     "npm-pick-manifest": "^9.1.0",
     "npm-profile": "^10.0.0",
