--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 !/.git-blame-ignore-revs
 !/.gitattributes
 !/.github/
+!/.vscode/
 !/.gitignore
 !/.licensee.json
 !/.mailmap
@@ -24,6 +25,8 @@
 !/configure
 !/CONTRIBUTING.md
 !/DEPENDENCIES.md
+!/docker-entrypoint.sh
+!/Dockerfile
 !/docs/
 !/index.js
 !/lib/
