--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,8 +5,6 @@
     //
     // https://marketplace.visualstudio.com/items?itemName=dbaeumer.vscode-eslint
     "dbaeumer.vscode-eslint",
-    // https://marketplace.visualstudio.com/items?itemName=vitest.explorer
-    "vitest.explorer",
     //
     // Others
     //
@@ -16,17 +14,11 @@
     "GitHub.copilot",
     // https://marketplace.visualstudio.com/items?itemName=GitHub.vscode-github-actions
     "GitHub.vscode-github-actions",
-    // https://marketplace.visualstudio.com/items?itemName=jasonnutter.vscode-codeowners
-    "jasonnutter.vscode-codeowners",
-    // https://marketplace.visualstudio.com/items?itemName=ms-azuretools.vscode-docker
-    "ms-azuretools.vscode-docker",
-    // https://marketplace.visualstudio.com/items?itemName=oderwat.indent-rainbow
-    "oderwat.indent-rainbow",
     // https://marketplace.visualstudio.com/items?itemName=redhat.vscode-yaml
     "redhat.vscode-yaml",
     // https://marketplace.visualstudio.com/items?itemName=timonwong.shellcheck
     "timonwong.shellcheck",
     // https://marketplace.visualstudio.com/items?itemName=usernamehw.errorlens
-    "usernamehw.errorlens",
+    "usernamehw.errorlens"
   ]
 }
